--- a/web/package.json
+++ b/web/package.json
@@ -13,13 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^7.4.0",
+    "@prisma/client": "^5.22.0",
     "next": "^16.1.6",
-    "prisma": "^7.4.0",
+    "prisma": "^5.22.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.2.3",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
