--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,44 @@
+# Dependencies
 node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Next.js
 .next
+out
+*.tsbuildinfo
+
+# Environment variables
 .env
 .env.*
+!.env.example
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Build outputs
 dist
+build
 coverage
+
+# Prisma
 .prisma
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+logs
+
+# Testing
+.nyc_output
+
+# Misc
+*.pem
